Checking other IP address API on heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                     <form class="form-inline" action="index.html" method="post">
                         <div class="form-group">
                             <input id="searchTerm" class="form-control" type="text" name="" value="" placeholder="Search Term">
-                            <input id="locationSearch" class="form-control" type="text" name="" value="" placeholder="IP Address">
+                            <input id="locationSearch" class="form-control" type="text" name="" value="" placeholder="IP Address (IPV4)">
                             <button id="locBtn" class="btn btn-default" type="button" name="button">Search</button>
                         </div>
                     </form>
